Breadcrum alignment issue fixed

--- a/ui-trainer/src/app/manage-trainer/manage-trainer.component.scss
+++ b/ui-trainer/src/app/manage-trainer/manage-trainer.component.scss
@@ -28,6 +28,7 @@
     content: ">";
     padding-left: $breadcrumb-padding;
     padding-right: $breadcrumb-padding;
+    margin-top: -5px;
 }
 .breadcrumb-element {
     color: $breadcrumb-font-color;
